--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           <h2>Toys</h2>
           <img src="box7_image.jpg" alt="Toys">
           <br>
-          <a href="#">Shop now</a>
+          <a href="#">Shop here now</a>
         </div>
         <div class="box4 box box1 a box1 img box1 h2">
           <h2>Dresses & Cloths</h2>
